HelloUltraviolet/Fixtures/RejectedSource/Keys/SpeculativeReleaseMode/Source/Main.uv
//! Rejected key-system specimen for combining speculative and release key-block modes.

public procedure speculativeReleaseModeReference() -> i32 {
    var shared_value: shared i32 = 1
    %release write shared_value speculative {
        shared_value = 2
    }
    return 0
}
